[fix] weather template: text overflow on small screen devices
- this PR fixes that the columns of the weather table are overflowing on small screen devices
- therefore we now display "..." at the end of too long words and cut them off
- additionally I added some small gap between columns, otherwise it looks weird on small screens

- closes https://github.com/searxng/searxng/issues/4887

--- a/client/simple/src/less/weather.less
+++ b/client/simple/src/less/weather.less
@@ -16,10 +16,14 @@
     table-layout: fixed;
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
+    border-collapse: separate;
+    border-spacing: 0.1em 0;
   }
 
   td {
     padding: 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   img.symbol {
